--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ test {
 
 jacocoTestReport {
     dependsOn test
+	// Intellij seems to complain about this, although cmdline gradle doesn't - TODO
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
             fileTree(dir: it,
@@ -47,6 +48,7 @@ jacocoTestReport {
             ])
         })
     }
+
 }
 
 // Help run app without compile first during dev
