--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'junit:junit:4.12'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -40,20 +42,20 @@ test {
 jacocoTestReport {
     dependsOn test
 	// Intellij seems to complain about this, although cmdline gradle doesn't - TODO
-    afterEvaluate {
-        classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it,
-            exclude: [
-                '**/todoList/Todo*'
-            ])
-        })
-    }
+    //afterEvaluate {
+    //    classDirectories = files(classDirectories.files.collect {
+    //        fileTree(dir: it,
+    //        exclude: [
+    //            '**/todoList/Todo*'
+    //        ])
+    //    })
+    //}
 
 }
 
 // Help run app without compile first during dev
 bootRun{
-	args = ["--spring.profiles.active=test"]
+	args = ["--spring.profiles.active=dev"]
 }
 
 // Main compile task from the spring boot gradle plugin
